css/index.css
@keyframes shake {
  10%,
  90% {
    transform: translate3d(-2px, 2px, 0px) scaleX(-1) rotate(-25deg);
  }
  20%,
  80% {
    transform: translate3d(1px, -2px, 0px) scaleX(-1) rotate(-30deg);
  }
  30%,
  70% {
    transform: translate3d(-4px, 3px, 0px) scaleX(-1) rotate(-33deg);
  }
  40%,
  60% {
    transform: translate3d(2px, -3px, 0px) scaleX(-1) rotate(-25deg);
  }
}
@keyframes slideInNav {
  from {
    transform: translateY(-5rem);
  }
  to {
    transform: translateY(0);
  }
}
@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes slideInFromBottom {
  from {
    transform: translateY(100vh);
  }
  to {
    transform: translateY(0);
  }
}
@keyframes growAndSkew {
  from {
    transform: scale(0) skewX(10deg);
  }
  to {
    transform: scale(1) skewX(10deg);
  }
}
@keyframes grow {
  from {
    transform: scale(0);
  }
  to {
    transform: scale(1);
  }
}
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
@font-face {
  font-family: 'IBM Plex Mono';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: local('IBM Plex Mono'), local('IBMPlexMono'), url(https://fonts.gstatic.com/s/ibmplexmono/v5/-F63fjptAgt5VM-kVkqdyU8n1i8q0g.ttf) format('truetype');
}
@font-face {
  font-family: 'Ubuntu';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: local('Ubuntu Regular'), local('Ubuntu-Regular'), url(https://fonts.gstatic.com/s/ubuntu/v14/4iCs6KVjbNBYlgoKfw7z.ttf) format('truetype');
}
html {
  font-size: 62.5%;
  scroll-behavior: smooth;
}
a,
a:visited {
  text-decoration: none;
}
body {
  font-family: "IBM Plex Mono", monospace;
}
h1,
h2,
h3,
h4,
h5,
h6,
button {
  font-family: "Ubuntu", sans-serif;
}
h1 {
  font-size: 6rem;
}
h2 {
  font-size: 3rem;
}
h3 {
  font-size: 1.8rem;
}
h4 {
  font-size: 1.4rem;
}
h5 {
  font-size: 1.2rem;
}
h6 {
  font-size: 1rem;
}
.btn {
  display: inline-block;
  font-size: 2rem;
  background-color: #f3470d;
  padding: 1rem 2rem;
  border-radius: 5px;
  color: #292929;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
  transition: 0.1s ease-out all;
  font-family: "Ubuntu", sans-serif;
}
.btn:hover {
  color: #fff;
  background-color: #00aecc;
  transform: translateY(-2px);
  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
}
.btn:active {
  color: #000;
  transform: translateY(1px);
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
}
.p5 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  z-index: -1;
  overflow: hidden;
  animation: fadeIn 1s ease-in-out forwards;
}
.p5 #p5-container {
  position: relative;
  width: 100%;
  height: 100%;
}
.p5 #p5-container canvas {
  width: 100%;
  height: auto;
}
.p5 .gradient {
  position: absolute;
  height: 100vh;
  width: 100%;
  top: 0;
  background-image: linear-gradient(to bottom right, rgba(193, 193, 193, 0.6), rgba(0, 0, 0, 0.4));
}
.background {
  height: 100vh;
  width: 100%;
  background-color: #0d0d0d;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
}
.about-container {
  background: #0d0d0d;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  animation: fadeIn 0.5s ease-in-out forwards;
}
.about-container .about {
  display: grid;
  max-width: 67%;
  padding: 2rem 2rem;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(6, auto);
  grid-gap: 2rem;
  transition: 0.2s ease-out max-width;
}
.about-container .about .solo-img {
  margin-top: 10%;
  width: 50%;
  max-width: 15rem;
}
.about-container .about #shaker {
  transform: scaleX(-1);
  transition: 0.2s ease-in-out all;
}
.about-container .about #shaker:hover {
  filter: invert(100%);
  animation: shake 1s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
}
.about-container .about .blue {
  background-image: linear-gradient(to bottom right, #00d9ff, #0098b3);
  transition: 0.2s ease-out transform;
}
.about-container .about .blue:hover {
  background-image: linear-gradient(to bottom right, #00aecc, #006c80);
  transform: translateY(-4px);
}
.about-container .about .blue:hover img {
  transition: 0.2s ease-out all;
  transform: scale(1.1);
}
.about-container .about .orange {
  background-image: linear-gradient(to bottom right, #f3470d, #ab3108);
}
.about-container .about .grey {
  background-image: linear-gradient(to bottom right, #5a5a5a, #292929);
}
.about-container .about .grey h1,
.about-container .about .grey h2 {
  color: #fff;
}
.about-container .about .grey img {
  filter: invert(100%);
}
.about-container .about .max-height-sm {
  max-height: 10rem;
}
.about-container .about .max-height-lg {
  max-height: 20rem;
}
.about-container .about .grow-icon img {
  animation: grow 0.35s ease-in-out;
}
.about-container .about .box {
  width: 100%;
  padding: 2rem;
}
.about-container .about .box img {
  width: 50%;
  min-width: 9rem;
  max-width: 12rem;
}
.about-container .about .box p {
  font-size: 1.6rem;
  font-weight: bold;
}
.about-container .about .box h2 {
  font-size: 6rem;
}
.about-container .about .box h3 {
  margin-bottom: 2.5rem;
}
.about-container .about .box a {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  color: #000;
  transition: 0.2s ease-in-out all;
}
.about-container .about .box a:hover {
  color: #fff;
  transform: translateY(-3px);
}
.about-container .about .box a:hover img {
  filter: invert(100%);
}
.about-container .about .span1 {
  grid-column: span 1;
}
.about-container .about .span2 {
  grid-column: span 2;
}
.about-container .about .span3 {
  grid-column: span 3;
}
.about-container .about .center {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}
.about-container .about .center-col {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
@media (max-width: 1306px) {
  .about-container .about {
    max-width: 80%;
  }
}
@media (max-width: 1100px) {
  .about-container .about {
    max-width: 90%;
  }
}
@media (max-width: 975px) {
  .about-container .about .span1 {
    grid-column: span 3;
  }
  .about-container .about .span2 {
    grid-column: span 3;
  }
}
@media (max-width: 575px) {
  .about-container .about {
    max-width: 100%;
  }
}
.home {
  height: calc(100vh - 5rem);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  animation: slideInFromBottom 0.5s ease-in-out forwards;
}
.home .container {
  max-width: 80vw;
}
.home .container .hero {
  transform: skewX(-10deg);
  background-color: rgba(227, 227, 227, 0.5);
  padding: 5rem;
  text-align: center;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
}
.home .container .hero .content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  animation: growAndSkew 0.6s ease-out forwards;
  transform: skewX(10deg);
}
.home .container .hero .content *:not(:last-child) {
  margin-bottom: 2rem;
}
@media (max-width: 575px) {
  .home .container {
    max-width: 90vw;
  }
  .home .container .hero {
    transform: skewX(0deg);
  }
  .home .container .hero .content {
    transform: inherit;
  }
}
.header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  background-color: #f3470d;
  padding: 0 4rem;
  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
  height: 5rem;
  animation: slideInNav 0.5s ease-out forwards;
}
.header nav {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}
.header nav .logo {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}
.header nav .logo svg {
  width: 5rem;
  height: 5rem;
  transform: scaleX(-1);
  margin: 0.75rem 0 0 0.5rem;
  transition: 0.2s ease-in-out all;
}
.header nav .logo svg:hover {
  fill: #fff;
  animation: shake 1s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
}
.header nav .logo h1 {
  display: inline;
  color: #fff;
  font-size: 3rem;
}
.header nav .logo h1:hover {
  color: #292929;
}
.header nav .nav-links .nav-link {
  display: inline-block;
  color: #292929;
  font-size: 2rem;
  font-family: "Ubuntu", sans-serif;
}
.header nav .nav-links .nav-link:hover {
  color: #e3e3e3;
}
.header nav .nav-links .nav-link:not(:last-child) {
  margin-right: 4rem;
}
.header nav .nav-links .nav-link div {
  height: 5rem;
  padding: 0 1rem;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}
.header nav .nav-links .nav-link div:hover {
  background-color: #292929;
}
@media (max-width: 575px) {
  .header {
    padding: 0 1rem;
  }
  .header nav .logo h1 {
    display: none;
  }
  .header nav .logo svg {
    fill: #fff;
  }
  .header nav .logo svg:hover {
    fill: #000;
  }
  .header nav .nav-links .nav-link:not(:last-child) {
    margin-right: 1rem;
  }
}

